# HMG-Chat

./: .env.example  .env.local.example  .gitignore  CLAUDE.md  LOOP_SETUP_REPORT.md  PROGRESS.md  PROMPT.P10.md  PROMPT.P12.md  PROMPT.P13.md  PROMPT.P14.md  PROMPT.P15.md  PROMPT.P16.md  PROMPT.P17.md  PROMPT.P18.md  PROMPT.P19.md  PROMPT.P20.md  PROMPT.P21.md  PROMPT.P22.md  PROMPT.init.md  PROMPT.md  PROMPT.phase.md  README.md  docker-compose.local.yml  eslint.config.mjs  feature_list.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.config.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.claude/: launch.json  settings.json
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
.ralph/: CONTRACT_APPROVED  CONTRACT_PENDING  P22-browser-debt.md  blocked_tasks  gates-setup.out
apps/converter-worker/: pyproject.toml
apps/converter-worker/src/: api.py  main.py  pptx_to_pdf.py
apps/converter-worker/src/tests/: test_api.py  test_pptx_to_pdf.py
docs/: ARCHITECTURE.md  DEV-DEPLOY-RULES.md  OWUI-vs-WCHAT-AUDIT.md  P21-BACKLOG.md  P22-GAP-CATALOG.md  UAT-TEST-PLAN.md  UIUX-INTERACTION-AUDIT.md
rebuild_plan/: 00-CONTEXT.md  00a-PROJECT-VARIABLES.md  01-LESSONS-LEARNED.md  02-PRODUCT-VISION.md  03-ARCHITECTURE.md  04-TECH-STACK.md  05-REPO-STRUCTURE.md  06-DATA-MODEL.md  07-AGENT-TEAMS.md  08-SPRINT-PLAN.md  09-TDD-GUIDE.md  10-DEV-WORKFLOW.md  11-DEPLOYMENT.md  12-OPS-SECURITY.md  13-GLOSSARY.md  14-INTERFACES.md  15-CI-PIPELINE.md  16-API-CONTRACT.md  17-PROMPT-ASSETS.md  18-FRONTEND-WIREFRAMES.md  19-UIUX-UPGRADE.md  README.md  (+4 more)
(+889 files in other folders)
